feat: add the preprocessing

--- a/main.ipynb
+++ b/main.ipynb
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Read data"
+    "# Reading data"
    ]
   },
   {
@@ -221,6 +221,111 @@
     "file, meta = arff.loadarff('data/phpPrh7lv.arff')\n",
     "data = pd.DataFrame(file)\n",
     "data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>V6</th>\n",
+       "      <th>Class</th>\n",
+       "      <th>V3</th>\n",
+       "      <th>V7</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.189302</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.570780</td>\n",
+       "      <td>0.345150</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.032883</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.662432</td>\n",
+       "      <td>0.215165</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.251453</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.879310</td>\n",
+       "      <td>0.150665</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.194243</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.793103</td>\n",
+       "      <td>0.140817</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.076701</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.864791</td>\n",
+       "      <td>0.322994</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         V6  Class        V3        V7\n",
+       "0  0.189302    0.0  0.570780  0.345150\n",
+       "1  0.032883    0.0  0.662432  0.215165\n",
+       "2  0.251453    0.0  0.879310  0.150665\n",
+       "3  0.194243    0.0  0.793103  0.140817\n",
+       "4  0.076701    0.0  0.864791  0.322994"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "correlations = data.corr()\n",
+    "avg_correlation = correlations.abs().mean()\n",
+    "selected_attributes = avg_correlation.nsmallest(4).index\n",
+    "df_selected = data[selected_attributes]\n",
+    "#df_selected.head()\n",
+    "\n",
+    "scaler = MinMaxScaler()\n",
+    "df_selected_normalized = pd.DataFrame(scaler.fit_transform(df_selected), columns=df_selected.columns)\n",
+    "df_selected_normalized.head()"
    ]
   }
  ],
