feat: add the KNN Grouping

--- a/main.ipynb
+++ b/main.ipynb
@@ -232,88 +232,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>V6</th>\n",
-       "      <th>Class</th>\n",
-       "      <th>V3</th>\n",
-       "      <th>V7</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.189302</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.570780</td>\n",
-       "      <td>0.345150</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.032883</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.662432</td>\n",
-       "      <td>0.215165</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.251453</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.879310</td>\n",
-       "      <td>0.150665</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.194243</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.793103</td>\n",
-       "      <td>0.140817</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.076701</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.864791</td>\n",
-       "      <td>0.322994</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         V6  Class        V3        V7\n",
-       "0  0.189302    0.0  0.570780  0.345150\n",
-       "1  0.032883    0.0  0.662432  0.215165\n",
-       "2  0.251453    0.0  0.879310  0.150665\n",
-       "3  0.194243    0.0  0.793103  0.140817\n",
-       "4  0.076701    0.0  0.864791  0.322994"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Selected: \n",
+      "      V6 Class      V3     V7\n",
+      "0  2.221  b'1'  0.8710  5.220\n",
+      "1  1.018  b'1'  0.8811  4.956\n",
+      "2  2.699  b'1'  0.9050  4.825\n",
+      "3  2.259  b'1'  0.8955  4.805\n",
+      "4  1.355  b'1'  0.9034  5.175\n",
+      "\n",
+      "Normalized: \n",
+      "         V6  Class        V3        V7\n",
+      "0  0.189302    0.0  0.570780  0.345150\n",
+      "1  0.032883    0.0  0.662432  0.215165\n",
+      "2  0.251453    0.0  0.879310  0.150665\n",
+      "3  0.194243    0.0  0.793103  0.140817\n",
+      "4  0.076701    0.0  0.864791  0.322994\n"
+     ]
     }
    ],
    "source": [
@@ -321,11 +263,62 @@
     "avg_correlation = correlations.abs().mean()\n",
     "selected_attributes = avg_correlation.nsmallest(4).index\n",
     "df_selected = data[selected_attributes]\n",
-    "#df_selected.head()\n",
+    "print(f\"\\nSelected: \\n{df_selected.head()}\")\n",
     "\n",
     "scaler = MinMaxScaler()\n",
     "df_selected_normalized = pd.DataFrame(scaler.fit_transform(df_selected), columns=df_selected.columns)\n",
-    "df_selected_normalized.head()"
+    "\n",
+    "print(f\"\\nNormalized: \\n{df_selected_normalized.head()}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# KNN Grouping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Group 3:\n",
+      "Cohesion:  0.4809790353552047\n",
+      "Splitting:  0.48097903535520486\n",
+      "\n",
+      "Group 4:\n",
+      "Cohesion: 0.5353170138549783\n",
+      "Splitting: 0.5353170138549783\n"
+     ]
+    }
+   ],
+   "source": [
+    "scaler = StandardScaler()\n",
+    "df_normalized = pd.DataFrame(scaler.fit_transform(data), columns=data.columns)\n",
+    "df_normalized.head()\n",
+    "\n",
+    "kmeans_3 = KMeans(n_clusters=3, init='random', random_state=42, n_init=10)\n",
+    "data['Cluster_3'] = kmeans_3.fit_predict(df_normalized)\n",
+    "kmeans_4 = KMeans(n_clusters=4, init='random', random_state=42, n_init=10)\n",
+    "data['Cluster_4'] = kmeans_4.fit_predict(df_normalized)\n",
+    "\n",
+    "cohesion_3 = silhouette_score(df_normalized, data['Cluster_3'])\n",
+    "separation_3 = silhouette_score(df_normalized, data['Cluster_3'], metric='euclidean', sample_size=len(data))\n",
+    "cohesion_4 = silhouette_score(df_normalized, data['Cluster_4'])\n",
+    "separation_4 = silhouette_score(df_normalized, data['Cluster_4'], metric='euclidean', sample_size=len(data))\n",
+    "\n",
+    "print(f\"Group 3:\")\n",
+    "print(f\"Cohesion:  {cohesion_3}\")\n",
+    "print(f\"Splitting:  {separation_3}\")\n",
+    "\n",
+    "print(f\"\\nGroup 4:\")\n",
+    "print(f\"Cohesion: {cohesion_4}\")\n",
+    "print(f\"Splitting: {separation_4}\")\n"
    ]
   }
  ],
