docs: add the Reading data documentation

--- a/main.ipynb
+++ b/main.ipynb
@@ -29,7 +29,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Reading data"
+    "# Reading data\n",
+    "\n",
+    "* **English version**: This code snippet loads data from an ARFF file using the arff module's loadarff function and assigns two values when unpacking it: file and meta. The data is then transformed into a Pandas DataFrame, making it easier to manipulate and analyze in the future.\n",
+    "\n",
+    "* **Portuguese version**: Este trecho de código carrega dados de um arquivo ARFF usando a função loadarff do módulo arff e atribui dois valores ao descompactá-lo: file e meta. Em seguida, os dados são transformados em um DataFrame do Pandas, facilitando a manipulação e análise futura."
    ]
   },
   {
@@ -227,7 +231,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Preprocessing"
+    "# Preprocessing\n",
+    "\n",
+    "* **English version**:\n",
+    "\n",
+    "* **Portuguese version**:"
    ]
   },
   {
@@ -275,7 +283,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# KNN Grouping"
+    "# KNN Grouping\n",
+    "\n",
+    "* **English version**:\n",
+    "\n",
+    "* **Portuguese version**:"
    ]
   },
   {
@@ -325,7 +337,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hierarchical Grouping\n"
+    "# Hierarchical Grouping\n",
+    "\n",
+    "* **English version**:\n",
+    "\n",
+    "* **Portuguese version**:"
    ]
   },
   {
@@ -598,7 +614,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Grouping by density"
+    "# Grouping by density\n",
+    "\n",
+    "* **English version**:\n",
+    "\n",
+    "* **Portuguese version**:"
    ]
   },
   {
