docs: add the preprocessing documentation

--- a/main.ipynb
+++ b/main.ipynb
@@ -233,9 +233,9 @@
    "source": [
     "# Preprocessing\n",
     "\n",
-    "* **English version**:\n",
+    "* **English version**: This code snippet starts by calculating the correlations between the data provided. It then obtains the average of the absolute correlations and selects the four attributes with the lowest average absolute correlations. It uses these attributes to filter the original data set, forming a new set. It then applies the MinMaxScaler technique to normalize the selected data. Finally, it displays the selected and normalized data sets.\n",
     "\n",
-    "* **Portuguese version**:"
+    "* **Portuguese version**: Este trecho de código começa calculando as correlações entre os dados fornecidos. A seguir, obtém a média das correlações absolutas e seleciona os quatro atributos que possuem as menores médias de correlação absoluta. Utiliza esses atributos para filtrar o conjunto de dados original, formando um novo conjunto. Depois, aplica a técnica MinMaxScaler para normalizar os dados selecionados. Por fim, exibe os conjuntos de dados escolhidos e normalizados."
    ]
   },
   {
@@ -287,7 +287,7 @@
     "\n",
     "* **English version**:\n",
     "\n",
-    "* **Portuguese version**:"
+    "* **Portuguese version**: "
    ]
   },
   {
