docs: add the knn grouping documentation

--- a/main.ipynb
+++ b/main.ipynb
@@ -285,9 +285,9 @@
    "source": [
     "# KNN Grouping\n",
     "\n",
-    "* **English version**:\n",
+    "* **English version**: This code performs a cluster analysis using KMeans. First, it normalizes the data using a StandardScaler, creates two KMeans models with 3 and 4 clusters respectively. Then, it calculates the cohesion and separation for each cluster using the silhouette_score metric. Finally, it displays the cohesion and separation values for the 3- and 4-cluster groups.\n",
     "\n",
-    "* **Portuguese version**: "
+    "* **Portuguese version**: Esse código executa uma análise de clusters usando KMeans. Primeiro, normaliza os dados usando um StandardScaler, cria dois modelos KMeans com 3 e 4 clusters, respectivamente. Depois, calcula a coesão e separação para cada cluster usando a métrica silhouette_score. Por fim, exibe os valores de coesão e separação para os grupos de 3 e 4 clusters."
    ]
   },
   {
