docs: add the hierarchical grouping documentation

--- a/main.ipynb
+++ b/main.ipynb
@@ -339,9 +339,9 @@
    "source": [
     "# Hierarchical Grouping\n",
     "\n",
-    "* **English version**:\n",
+    "* **English version**: The code normalizes the data using sklearn's StandardScaler, applies an agglomerative hierarchical clustering algorithm using sklearn's AgglomerativeClustering, using the 'ward' metric to calculate the distances between the clusters. The end result is the linkage_matrix, which represents the mergers of clusters during the hierarchical clustering process.\n",
     "\n",
-    "* **Portuguese version**:"
+    "* **Portuguese version**: O código normaliza os dados usando o StandardScaler do sklearn, aplica um algoritmo de clustering hierárquico aglomerativo usando AgglomerativeClustering do sklearn, usando a métrica 'ward' para calcular as distâncias entre os clusters. O resultado final é a matriz de ligação ('linkage_matrix'), que representa as fusões de clusters durante o processo de clustering hierárquico."
    ]
   },
   {
