docs: add the grouping by density documentation

--- a/main.ipynb
+++ b/main.ipynb
@@ -616,9 +616,9 @@
    "source": [
     "# Grouping by density\n",
     "\n",
-    "* **English version**:\n",
+    "* **English version**: This code snippet normalizes the data using a StandardScaler, then runs a DBSCAN algorithm on various combinations of values for the eps and min_samples parameters. For each combination, it checks whether there is a single cluster or whether all the points are considered noise. If more than one cluster is identified, it calculates and prints the estimated number of clusters, the number of noise points and the Silhouette index to assess the cohesion of the identified clusters.\n",
     "\n",
-    "* **Portuguese version**:"
+    "* **Portuguese version**: Este trecho de código normaliza os dados usando um StandardScaler, em seguida, executa um algoritmo DBSCAN em várias combinações de valores para os parâmetros eps e min_samples. Para cada combinação, verifica se há um único cluster ou se todos os pontos são considerados ruído. Se houver mais de um cluster identificado, calcula e imprime o número estimado de clusters, a quantidade de pontos de ruído e o índice de Silhouette para avaliar a coesão dos clusters identificados.  "
    ]
   },
   {
